# rezn-dsl

./: .gitignore  Makefile  README.md  dune  dune-project  rezn-dsl.opam  test.ir.json
.github/workflows/: release.yml
cli/: main.ml
examples/: basic-example.ir.json  basic-example.json  basic-example.rezn
lib/: ast.ml  codegen.ml  dune  frontend.ml  jcs_bindings.ml  keys.ml  parser.mly  sign.ml  verify.ml
packaging/: postinst.sh  postrm.sh  rezndsl.env.default  rezndsl.logrotate  rezndsl.service
reznc/: dune  main.ml
server/: dune  main.ml
src/: ast.ml  codegen.ml  dune  frontend.ml  ir.mli  irgen.ml  irgen.mli  lexer.mll  main.ml  parser.mly  typecheck.ml
test/: README.md  dune  parser_tests.ml
verify/: main.ml
